# OS_labs

OS_lab1/: CMakeLists.txt  ПРОЧТИ МЕНЯ.txt
OS_lab1/Dll1/: Dll1.vcxproj  Vector.cpp
OS_lab1/Dll1/x64/Debug/: Dll1.dll.recipe  Dll1.ilk  vc143.idb
OS_lab1/Dll1/x64/Debug/Dll1.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
OS_lab1/Library testet/: Library testet.vcxproj  main.cpp
OS_lab1/Library testet/x64/Debug/: Library tester.exe.recipe  Library tester.ilk  Library testet.exe.recipe  vc143.idb
OS_lab1/Library testet/x64/Debug/Library tester.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  Library tester.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
OS_lab1/Library testet/x64/Debug/Library testet.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
OS_lab1/StaticLib1/: LibLab.sln  Number.cpp  StaticLib1.vcxproj  StaticLib1.vcxproj.filters
OS_lab1/StaticLib1/StaticLib1/x64/Debug/StaticLib1.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  Lib-link.read.1.tlog  Lib-link.write.1.tlog  Lib.command.1.tlog
OS_lab1/StaticLib1/x64/Debug/: Dll1.exp  Dll1.lib  StaticLib1.idb
OS_lab1/Summary/: Number.h  StaticLib1.lib  Vector.h
matrix_lab/other_implementation/: other_implenetation  out.txt
matrix_lab/pthread/: main  main.cpp  out.txt
(+6 files in other folders)
